<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dice_bw_scene_2"
    tools:context=".DicePage">

    <TextView
        android:id="@+id/choose_your_Dice_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="32dp"
        android:text="@string/choose_your_dice"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/dice_RGroup"
        android:layout_width="150dp"
        android:layout_height="267dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_your_Dice_textView">


        <RadioButton
            android:id="@+id/rb_4_sided"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:contentDescription="4"
            android:text="@string/_4_sided"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_6_sided"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/_6_sided"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_8_sided"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/_8_sided"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_10_sided"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/_10_sided"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_12_sided"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/_12_sided"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_20_sided"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/_20_sided"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb_100_sided"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/_100_sided_percent"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/roll"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/dice_RGroup"
        app:layout_constraintTop_toBottomOf="@+id/dice_RGroup"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/roll_result_textView"
        android:layout_width="168dp"
        android:layout_height="38dp"

        android:layout_marginTop="20dp"
        android:background="#E1DCDC"
        android:text="@string/result_text"
        android:textAlignment="center"
        android:textColor="#616161"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/roll_button"
        app:layout_constraintTop_toBottomOf="@+id/roll_button" />

</androidx.constraintlayout.widget.ConstraintLayout>